# gpu-zbuffer-renderer

./: .gitignore  README.md
cuda/: CMakeLists.txt
cuda/src/: renderer.cu
matlab/: flatShading.m  gouraudShading.m  initZBuffer.m  main.m  ndcToScreen.m  normalizeRows.m  normalizeVec.m  orthographicProject.m  perspectiveProject.m  phongShading.m  phongWrapper.m  project.m  rasterizeTriangle.m  readMtl.m  readObj.m  render.m  unifiedLighting.m  vertexColorMapping.m  zTestAndUpdate.m
matlab/objs/: monkey_cork.mtl  monkey_pink.mtl
